jets/compilerv2/.antlr/JetRuleParser.java
// Generated from /home/michel/projects/repos/jetstore_agentic_ai/jetstore_ai/jets/compilerv2/JetRule.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JetRuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, JetCompilerDirective=13, CLASS=14, BaseClasses=15, 
		AsTable=16, DataProperties=17, ARRAY=18, GroupingProperties=19, MAIN=20, 
		JETSCONFIG=21, MaxLooping=22, MaxRuleExec=23, InputType=24, RULESEQ=25, 
		MainRuleSets=26, TRIPLE=27, Int32Type=28, UInt32Type=29, Int64Type=30, 
		UInt64Type=31, DoubleType=32, StringType=33, DateType=34, DatetimeType=35, 
		BoolType=36, ResourceType=37, VolatileResourceType=38, CreateUUIDResource=39, 
		LookupTable=40, TableName=41, CSVFileName=42, Key=43, Columns=44, TRUE=45, 
		FALSE=46, NULL=47, NOT=48, TOTEXT=49, EQ=50, LT=51, LE=52, GT=53, GE=54, 
		NE=55, REGEX2=56, PLUS=57, MINUS=58, MUL=59, DIV=60, OR=61, AND=62, SEMICOLON=63, 
		ASSIGN=64, Identifier=65, DIGITS=66, STRING=67, COMMENT=68, WS=69;
	public static final int
		RULE_jetrule = 0, RULE_statement = 1, RULE_jetCompilerDirectiveStmt = 2, 
		RULE_defineJetStoreConfigStmt = 3, RULE_jetstoreConfig = 4, RULE_jetstoreConfigSeq = 5, 
		RULE_jetstoreConfigItem = 6, RULE_defineClassStmt = 7, RULE_classStmt = 8, 
		RULE_subClassOfStmt = 9, RULE_dataPropertyDefinitions = 10, RULE_dataPropertyType = 11, 
		RULE_groupingPropertyStmt = 12, RULE_asTableStmt = 13, RULE_asTableFlag = 14, 
		RULE_defineRuleSeqStmt = 15, RULE_ruleSetSeq = 16, RULE_ruleSetDefinitions = 17, 
		RULE_defineLiteralStmt = 18, RULE_int32LiteralStmt = 19, RULE_uInt32LiteralStmt = 20, 
		RULE_int64LiteralStmt = 21, RULE_uInt64LiteralStmt = 22, RULE_doubleLiteralStmt = 23, 
		RULE_stringLiteralStmt = 24, RULE_dateLiteralStmt = 25, RULE_datetimeLiteralStmt = 26, 
		RULE_booleanLiteralStmt = 27, RULE_intExpr = 28, RULE_uintExpr = 29, RULE_doubleExpr = 30, 
		RULE_declIdentifier = 31, RULE_defineResourceStmt = 32, RULE_namedResourceStmt = 33, 
		RULE_volatileResourceStmt = 34, RULE_resourceValue = 35, RULE_lookupTableStmt = 36, 
		RULE_csvLocation = 37, RULE_stringList = 38, RULE_stringSeq = 39, RULE_columnDefSeq = 40, 
		RULE_columnDefinitions = 41, RULE_jetRuleStmt = 42, RULE_ruleProperties = 43, 
		RULE_propertyValue = 44, RULE_antecedent = 45, RULE_consequent = 46, RULE_atom = 47, 
		RULE_objectAtom = 48, RULE_keywords = 49, RULE_exprTerm = 50, RULE_binaryOp = 51, 
		RULE_unaryOp = 52, RULE_tripleStmt = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"jetrule", "statement", "jetCompilerDirectiveStmt", "defineJetStoreConfigStmt", 
			"jetstoreConfig", "jetstoreConfigSeq", "jetstoreConfigItem", "defineClassStmt", 
			"classStmt", "subClassOfStmt", "dataPropertyDefinitions", "dataPropertyType", 
			"groupingPropertyStmt", "asTableStmt", "asTableFlag", "defineRuleSeqStmt", 
			"ruleSetSeq", "ruleSetDefinitions", "defineLiteralStmt", "int32LiteralStmt", 
			"uInt32LiteralStmt", "int64LiteralStmt", "uInt64LiteralStmt", "doubleLiteralStmt", 
			"stringLiteralStmt", "dateLiteralStmt", "datetimeLiteralStmt", "booleanLiteralStmt", 
			"intExpr", "uintExpr", "doubleExpr", "declIdentifier", "defineResourceStmt", 
			"namedResourceStmt", "volatileResourceStmt", "resourceValue", "lookupTableStmt", 
			"csvLocation", "stringList", "stringSeq", "columnDefSeq", "columnDefinitions", 
			"jetRuleStmt", "ruleProperties", "propertyValue", "antecedent", "consequent", 
			"atom", "objectAtom", "keywords", "exprTerm", "binaryOp", "unaryOp", 
			"tripleStmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "','", "'['", "']'", "'as'", "'.'", "':'", "'->'", 
			"'('", "')'", "'?'", "'@JetCompilerDirective'", "'class'", "'$base_classes'", 
			"'$as_table'", "'$data_properties'", "'array of'", "'$grouping_properties'", 
			"'main'", "'jetstore_config'", "'$max_looping'", "'$max_rule_exec'", 
			"'$input_types'", "'rule_sequence'", "'$main_rule_sets'", "'triple'", 
			"'int'", "'uint'", "'long'", "'ulong'", "'double'", "'text'", "'date'", 
			"'datetime'", "'bool'", "'resource'", "'volatile_resource'", "'create_uuid_resource()'", 
			"'lookup_table'", "'$table_name'", "'$csv_file'", "'$key'", "'$columns'", 
			"'true'", "'false'", "'null'", "'not'", "'toText'", "'=='", "'<'", "'<='", 
			"'>'", "'>='", "'!='", "'r?'", "'+'", "'-'", "'*'", "'/'", "'or'", "'and'", 
			"';'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "JetCompilerDirective", "CLASS", "BaseClasses", "AsTable", "DataProperties", 
			"ARRAY", "GroupingProperties", "MAIN", "JETSCONFIG", "MaxLooping", "MaxRuleExec", 
			"InputType", "RULESEQ", "MainRuleSets", "TRIPLE", "Int32Type", "UInt32Type", 
			"Int64Type", "UInt64Type", "DoubleType", "StringType", "DateType", "DatetimeType", 
			"BoolType", "ResourceType", "VolatileResourceType", "CreateUUIDResource", 
			"LookupTable", "TableName", "CSVFileName", "Key", "Columns", "TRUE", 
			"FALSE", "NULL", "NOT", "TOTEXT", "EQ", "LT", "LE", "GT", "GE", "NE", 
			"REGEX2", "PLUS", "MINUS", "MUL", "DIV", "OR", "AND", "SEMICOLON", "ASSIGN", 
			"Identifier", "DIGITS", "STRING", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JetRule.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JetRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JetruleContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JetRuleParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public JetruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jetrule; }
	}

	public final JetruleContext jetrule() throws RecognitionException {
		JetruleContext _localctx = new JetruleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_jetrule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1649169948688L) != 0) || _la==COMMENT) {
				{
				{
				setState(108);
				statement();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public JetCompilerDirectiveStmtContext jetCompilerDirectiveStmt() {
			return getRuleContext(JetCompilerDirectiveStmtContext.class,0);
		}
		public DefineJetStoreConfigStmtContext defineJetStoreConfigStmt() {
			return getRuleContext(DefineJetStoreConfigStmtContext.class,0);
		}
		public DefineLiteralStmtContext defineLiteralStmt() {
			return getRuleContext(DefineLiteralStmtContext.class,0);
		}
		public DefineClassStmtContext defineClassStmt() {
			return getRuleContext(DefineClassStmtContext.class,0);
		}
		public DefineRuleSeqStmtContext defineRuleSeqStmt() {
			return getRuleContext(DefineRuleSeqStmtContext.class,0);
		}
		public DefineResourceStmtContext defineResourceStmt() {
			return getRuleContext(DefineResourceStmtContext.class,0);
		}
		public LookupTableStmtContext lookupTableStmt() {
			return getRuleContext(LookupTableStmtContext.class,0);
		}
		public JetRuleStmtContext jetRuleStmt() {
			return getRuleContext(JetRuleStmtContext.class,0);
		}
		public TripleStmtContext tripleStmt() {
			return getRuleContext(TripleStmtContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(JetRuleParser.COMMENT, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case JetCompilerDirective:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				jetCompilerDirectiveStmt();
				}
				break;
			case MAIN:
			case JETSCONFIG:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				defineJetStoreConfigStmt();
				}
				break;
			case Int32Type:
			case UInt32Type:
			case Int64Type:
			case UInt64Type:
			case DoubleType:
			case StringType:
			case DateType:
			case DatetimeType:
			case BoolType:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				defineLiteralStmt();
				}
				break;
			case CLASS:
				enterOuterAlt(_localctx, 4);
				{
				setState(119);
				defineClassStmt();
				}
				break;
			case RULESEQ:
				enterOuterAlt(_localctx, 5);
				{
				setState(120);
				defineRuleSeqStmt();
				}
				break;
			case ResourceType:
			case VolatileResourceType:
				enterOuterAlt(_localctx, 6);
				{
				setState(121);
				defineResourceStmt();
				}
				break;
			case LookupTable:
				enterOuterAlt(_localctx, 7);
				{
				setState(122);
				lookupTableStmt();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 8);
				{
				setState(123);
				jetRuleStmt();
				}
				break;
			case TRIPLE:
				enterOuterAlt(_localctx, 9);
				{
				setState(124);
				tripleStmt();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 10);
				{
				setState(125);
				match(COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JetCompilerDirectiveStmtContext extends ParserRuleContext {
		public DeclIdentifierContext varName;
		public Token declValue;
		public TerminalNode JetCompilerDirective() { return getToken(JetRuleParser.JetCompilerDirective, 0); }
		public TerminalNode ASSIGN() { return getToken(JetRuleParser.ASSIGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JetRuleParser.SEMICOLON, 0); }
		public DeclIdentifierContext declIdentifier() {
			return getRuleContext(DeclIdentifierContext.class,0);
		}
		public TerminalNode STRING() { return getToken(JetRuleParser.STRING, 0); }
		public JetCompilerDirectiveStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jetCompilerDirectiveStmt; }
	}

	public final JetCompilerDirectiveStmtContext jetCompilerDirectiveStmt() throws RecognitionException {
		JetCompilerDirectiveStmtContext _localctx = new JetCompilerDirectiveStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jetCompilerDirectiveStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(JetCompilerDirective);
			setState(129);
			((JetCompilerDirectiveStmtContext)_localctx).varName = declIdentifier();
			setState(130);
			match(ASSIGN);
			setState(131);
			((JetCompilerDirectiveStmtContext)_localctx).declValue = match(STRING);
			setState(132);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefineJetStoreConfigStmtContext extends ParserRuleContext {
		public JetstoreConfigContext jetstoreConfig() {
			return getRuleContext(JetstoreConfigContext.class,0);
		}
		public JetstoreConfigSeqContext jetstoreConfigSeq() {
			return getRuleContext(JetstoreConfigSeqContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JetRuleParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMENT() { return getTokens(JetRuleParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(JetRuleParser.COMMENT, i);
		}
		public DefineJetStoreConfigStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineJetStoreConfigStmt; }
	}

	public final DefineJetStoreConfigStmtContext defineJetStoreConfigStmt() throws RecognitionException {
		DefineJetStoreConfigStmtContext _localctx = new DefineJetStoreConfigStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defineJetStoreConfigStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			jetstoreConfig();
			setState(135);
			match(T__0);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(136);
				match(COMMENT);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			jetstoreConfigSeq();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(143);
				match(COMMENT);
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(149);
			match(T__1);
			setState(150);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JetstoreConfigContext extends ParserRuleContext {
		public TerminalNode JETSCONFIG() { return getToken(JetRuleParser.JETSCONFIG, 0); }
		public TerminalNode MAIN() { return getToken(JetRuleParser.MAIN, 0); }
		public JetstoreConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jetstoreConfig; }
	}

	public final JetstoreConfigContext jetstoreConfig() throws RecognitionException {
		JetstoreConfigContext _localctx = new JetstoreConfigContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_jetstoreConfig);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			_la = _input.LA(1);
			if ( !(_la==MAIN || _la==JETSCONFIG) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JetstoreConfigSeqContext extends ParserRuleContext {
		public List<JetstoreConfigItemContext> jetstoreConfigItem() {
			return getRuleContexts(JetstoreConfigItemContext.class);
		}
		public JetstoreConfigItemContext jetstoreConfigItem(int i) {
			return getRuleContext(JetstoreConfigItemContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(JetRuleParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(JetRuleParser.COMMENT, i);
		}
		public JetstoreConfigSeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jetstoreConfigSeq; }
	}

	public final JetstoreConfigSeqContext jetstoreConfigSeq() throws RecognitionException {
		JetstoreConfigSeqContext _localctx = new JetstoreConfigSeqContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_jetstoreConfigSeq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			jetstoreConfigItem();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(155);
				match(T__2);
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMENT) {
					{
					{
					setState(156);
					match(COMMENT);
					}
					}
					setState(161);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(162);
				jetstoreConfigItem();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JetstoreConfigItemContext extends ParserRuleContext {
		public Token configKey;
		public UintExprContext configValue;
		public DeclIdentifierContext declIdentifier;
		public List<DeclIdentifierContext> rdfTypeList = new ArrayList<DeclIdentifierContext>();
		public TerminalNode ASSIGN() { return getToken(JetRuleParser.ASSIGN, 0); }
		public TerminalNode MaxLooping() { return getToken(JetRuleParser.MaxLooping, 0); }
		public UintExprContext uintExpr() {
			return getRuleContext(UintExprContext.class,0);
		}
		public TerminalNode MaxRuleExec() { return getToken(JetRuleParser.MaxRuleExec, 0); }
		public TerminalNode InputType() { return getToken(JetRuleParser.InputType, 0); }
		public List<DeclIdentifierContext> declIdentifier() {
			return getRuleContexts(DeclIdentifierContext.class);
		}
		public DeclIdentifierContext declIdentifier(int i) {
			return getRuleContext(DeclIdentifierContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(JetRuleParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(JetRuleParser.COMMENT, i);
		}
		public JetstoreConfigItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jetstoreConfigItem; }
	}
